Bug 280997 - ldif importer does not import home street
Summary: ldif importer does not import home street
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-29 12:58 UTC by Denis Prost
Modified: 2012-07-03 09:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments
ldif file to test the ldif importer (335 bytes, application/octet-stream)
2011-08-29 12:58 UTC, Denis Prost
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Denis Prost 2011-08-29 12:58:20 UTC
Created attachment 63215 [details]
ldif file to test the ldif importer

Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

when importing an ldif addressbook (exported from thunderbird), home street data is lost, the only imported home address informations are the postal code and the city.

Reproducible: Always

Steps to Reproduce:
1) import the attached file in kaddressbook
2) check the result

Actual Results:  
 postal code and city are OK, but no street field while it was present in the ldif file

Expected Results:  
street field should be filled.

OS: Linux (i686) release 3.0-CHAKRA
Compiler: gcc
Comment 1 Anders Lund 2012-02-01 19:34:01 UTC
Still the case using KDE 4.8
Comment 2 Laurent Montel 2012-07-03 08:04:22 UTC
Git commit ce8e1f5b35c0a99311d885771c53a57db87b0c0e by Montel Laurent.
Committed on 03/07/2012 at 10:03.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 280997 - ldif importer does not import home street

FIXED-IN: 4.9

M  +5    -3    kabc/ldifconverter.cpp

http://commits.kde.org/kdepimlibs/ce8e1f5b35c0a99311d885771c53a57db87b0c0e
Comment 3 Laurent Montel 2012-07-03 08:05:29 UTC
Git commit c35ea6f56dd2cbb9ecc9a30176625e9e50dc0b6b by Montel Laurent.
Committed on 03/07/2012 at 10:03.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 280997 - ldif importer does not import home street

FIXED-IN: 4.9
(cherry picked from commit ce8e1f5b35c0a99311d885771c53a57db87b0c0e)

M  +5    -3    kabc/ldifconverter.cpp

http://commits.kde.org/kdepimlibs/c35ea6f56dd2cbb9ecc9a30176625e9e50dc0b6b
Comment 4 Denis Prost 2012-07-03 09:36:53 UTC
Thanks for the fix !