Fix Bug 280997 - ldif importer does not import home street

FIXED-IN: 4.9
BUG: 280997